Support for old arch added

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,11 +15,16 @@ buildscript {
     }
 }
 
+def isNewArchitectureEnabled() {
+    return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
+}
 
 apply plugin: "com.android.library"
 apply plugin: "kotlin-android"
 
-apply plugin: "com.facebook.react"
+if (isNewArchitectureEnabled()) {
+    apply plugin: "com.facebook.react"
+}
 
 def getExtOrIntegerDefault(name) {
     return rootProject.ext.has(name) ? rootProject.ext.get(name) : (project.properties["RnKillApp_" + name]).toInteger()
@@ -33,6 +38,7 @@ android {
     defaultConfig {
         minSdkVersion getExtOrIntegerDefault("minSdkVersion")
         targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
+        buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
     }
 
     buildFeatures {
@@ -56,12 +62,14 @@ android {
 
     sourceSets {
         main {
-            java.srcDirs += [
-                "generated/java",
-                "generated/jni"
-            ]
+            if (isNewArchitectureEnabled()) {
+                java.srcDirs += ['src/newarch']
+            } else {
+                java.srcDirs += ['src/oldarch']
+            }
         }
     }
+
 }
 
 repositories {
@@ -76,8 +84,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
-react {
-    jsRootDir = file("../src/")
-    libraryName = "RnKillApp"
-    codegenJavaPackageName = "com.rnkillapp"
+if (isNewArchitectureEnabled()) {
+    react {
+        jsRootDir = file("../src/")
+        libraryName = "RnKillApp"
+        codegenJavaPackageName = "com.rnkillapp"
+    }
 }
